data/forge_javadoc/1.9.4/processed/net_minecraft_world_gen_structure_StructureMineshaftPieces.Corridor.md
# StructureMineshaftPieces.Corridor

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureMineshaftPieces.Corridor

## Class signature

```java
public static class StructureMineshaftPieces.Corridor extends StructureComponent
```

## Methods

- `boolean addComponentParts(World worldIn, java.util.Random randomIn, StructureBoundingBox structureBoundingBoxIn)`
- `void buildComponent(StructureComponent componentIn, java.util.List<StructureComponent> listIn, java.util.Random rand)`
- `static StructureBoundingBox findCorridorSize(java.util.List<StructureComponent> p_175814_0_, java.util.Random rand, int x, int y, int z, EnumFacing facing)`
- `protected boolean generateChest(World worldIn, StructureBoundingBox structurebb, java.util.Random randomIn, int x, int y, int z, ResourceLocation loot)`
- `protected void readStructureFromNBT(NBTTagCompound tagCompound)`
- `protected void writeStructureToNBT(NBTTagCompound tagCompound)`

## Fields

- `Corridor`
- `Corridor`